# Subtitle_translator

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALLATION_VERIFIED.md  Install-SubtitleTranslator.ps1  README.md  README_NEW.md  README_backup.md  asr_translate_srt.py  build_binary.py  demo.py  keep_files_asr.py  pyproject.toml  requirements.txt  setup.ps1  test_clean.py  test_installation.py  test_internal.en.srt  test_nllb600m.en.srt  test_package.py  test_video.en.srt  transcribe_to_file.py  validate_setup.py  whisper_clean.py  whisper_mvp.py  whisper_simple.py
.github/: copilot-instructions.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODEBASE.md  DEVELOPMENT.md  TROUBLESHOOTING.md
scripts/: check_cuda.ps1  clean_srt_credits.py  translate_srt_to_english.py
src/subtitle_translator/: __init__.py  asr.py  cli.py  media.py  mt.py  profiles.py  quality.py  remux.py  srt_io.py
