[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-translator"
version = "0.1.0"
description = "Fast ASR→MT→SRT pipeline with readability controls"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Melvin Beck", email = "beckmt4@example.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "faster-whisper==1.2.0",         # ASR engine
  "ctranslate2==4.6.0",            # runtime for Faster-Whisper + NLLB
  "torch>=2.2.0",
  "transformers>=4.40.0",
  "sentencepiece>=0.1.99",
  "pysubs2>=1.8.0",                # SRT/ASS/WEBVTT handling
  "srt>=3.5.3",
  "tqdm>=4.66.0",
  "rich>=13.7.0",
  "pydantic>=2.7.0",
  "typer>=0.9.0",                  # CLI framework
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.7.0",
  "ruff>=0.0.284",
  "mypy>=1.5.1",
]
gpu = [
  "torch>=2.2.0",                  # With CUDA support
]

[project.urls]
"Homepage" = "https://github.com/beckmt4/Subtitle_translator"
"Bug Tracker" = "https://github.com/beckmt4/Subtitle_translator/issues"

[project.scripts]
subtrans = "subtitle_translator.cli:app"
subtitle-translator = "subtitle_translator.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "B", "C4", "N", "UP"]
